ZDF: adjust to new press site, needs your login credentials now
ZDFinfo, ZDFkultur, ZDFneo and 3sat can likely be handled by the main ZDF
importer now.

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -99,6 +99,7 @@
 
     Infomedia => {
       Type => 'Infomedia',
+      MaxDays => 25,
       Channels => {
         'english.aljazeera.net' =>
             [ 'Al Jazeera (English)', 'AJI', 'en', 0, '', '', 'http://www.aljazeera.com/', 'TV' ],
@@ -210,8 +211,10 @@
     {
       Type => 'ZDF',
       MaxWeeks => 6,
+      Username => 'see override.conf',
+      Password => 'see override.conf',
       Channels => {
-	'hd.zdf.de' => [ 'ZDF HD', '', 'de', 0, undef, undef, 'http://www.zdf.de/', 'TV'],
+	'hd.zdf.de' => [ 'ZDF HD', '01', 'de', 0, undef, undef, 'http://www.zdf.de/', 'TV'],
       },
     },
 
