ZDF*: move over the other ZDF channels to the new press site
In case you haven't got login credentials yet, request them at
https://pressetreff.zdf.de/

You can now get all four ZDF channels in one grabber but might need to
move your channels over by hand (if you have augmenterrules attached to
the channel number).

DreiSat stays as it is for now. Their old site still works and its not
announced the new ZDF site. (technically they have the data though)

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -218,18 +218,11 @@
       },
     },
 
-    ZDFinfo =>
-    {
-      Type => 'ZDFinfo',
-      Channels => {
-#	'infokanal.zdf.de' => [ 'ZDFinfokanal', '', 'de', 0, undef, undef, 'http://infokanal.zdf.de/', 'TV'],
-      },
-    },
-
     ZDFinfo_http =>
     {
       Type => 'ZDFinfo_http',
-      MaxWeeks => 5, # 6 actually, need to fix a bug with the sa-fr week
+      Username => 'see override.conf',
+      Password => 'see override.conf',
       Channels => {
 	'infokanal.zdf.de' => [ 'ZDFinfokanal', '', 'de', 0, undef, undef, 'http://infokanal.zdf.de/', 'TV'],
       },
@@ -238,7 +231,8 @@
     ZDFkultur =>
     {
       Type => 'ZDFkultur',
-      MaxWeeks => 5, # 6 actually, need to fix a bug with the sa-fr week
+      Username => 'see override.conf',
+      Password => 'see override.conf',
       Channels => {
 	'kultur.zdf.de' => [ 'ZDFkultur', '', 'de', 0, undef, undef, 'http://kultur.zdf.de/', 'TV'],
       },
@@ -248,7 +242,8 @@
     ZDFneo =>
     {
       Type => 'ZDFneo',
-      MaxWeeks => 5, # 6 actually, need to fix a bug with the sa-fr week
+      Username => 'see override.conf',
+      Password => 'see override.conf',
       Channels => {
 	'neo.zdf.de' => [ 'ZDFneo', '', 'de', 0, undef, undef, 'http://neo.zdf.de/', 'TV'],
       },
