german config: switch over to just one ZDF importer instead of four
don't forget to move your channels over in the same step so your
augmenter rules don't break.

update channels set grabber ='ZDF' where grabber like 'ZDF%';

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -213,38 +213,10 @@
       Username => 'see override.conf',
       Password => 'see override.conf',
       Channels => {
-	'hd.zdf.de' => [ 'ZDF HD', '01', 'de', 0, undef, undef, 'http://www.zdf.de/', 'TV'],
-      },
-    },
-
-    ZDFinfo_http =>
-    {
-      Type => 'ZDFinfo_http',
-      Username => 'see override.conf',
-      Password => 'see override.conf',
-      Channels => {
-	'infokanal.zdf.de' => [ 'ZDFinfokanal', '', 'de', 0, undef, undef, 'http://infokanal.zdf.de/', 'TV'],
-      },
-    },
-
-    ZDFkultur =>
-    {
-      Type => 'ZDFkultur',
-      Username => 'see override.conf',
-      Password => 'see override.conf',
-      Channels => {
-	'kultur.zdf.de' => [ 'ZDFkultur', '', 'de', 0, undef, undef, 'http://kultur.zdf.de/', 'TV'],
-      },
-    },
-
-
-    ZDFneo =>
-    {
-      Type => 'ZDFneo',
-      Username => 'see override.conf',
-      Password => 'see override.conf',
-      Channels => {
-	'neo.zdf.de' => [ 'ZDFneo', '', 'de', 0, undef, undef, 'http://neo.zdf.de/', 'TV'],
+	'hd.zdf.de'        => [ 'ZDF HD',       '01', 'de', 0, undef, undef, 'http://www.zdf.de/',       'TV'],
+	'infokanal.zdf.de' => [ 'ZDFinfokanal', '22', 'de', 0, undef, undef, 'http://infokanal.zdf.de/', 'TV'],
+	'kultur.zdf.de'    => [ 'ZDFkultur',    '21', 'de', 0, undef, undef, 'http://kultur.zdf.de/',    'TV'],
+	'neo.zdf.de'       => [ 'ZDFneo',       '23', 'de', 0, undef, undef, 'http://neo.zdf.de/',       'TV'],
       },
     },
 
@@ -257,7 +229,7 @@
 	'arteeinsextra.ard.de' => [ 'arte/EinsExtra', '', 'de', 0, undef, undef, undef, 'TV'],
 	'neokika.zdfmobil.de' => [ 'neo/KiKa', '', 'de', 0, undef, undef, undef, 'TV'],
         'nickcc.mtvnetworks.de' => [ 'Nickelodeon / Comedy Central (Germany)', '', 'de', 0, undef, undef, undef, 'TV'],
-        'ch.nickcc.mtvnetworks.de' => [ 'Nickelodeon / Comedy Central (Switzerland)', '', 'de', 0, undef, undef, undef, 'TV'],
+#        'ch.nickcc.mtvnetworks.de' => [ 'Nickelodeon / Comedy Central (Switzerland)', '', 'de', 0, undef, undef, undef, 'TV'],
       },
     },
 
