Tele5: parse more attributes and updates configuration

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -202,7 +202,9 @@
         'rp.swr2.swr.de' => [ 'SWR 2 RP', 'SWR 2 RP', 'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
         'bw.swr4.swr.de' => [ 'SWR 4 BW', 'SWR 4 BW', 'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
         'rp.swr4.swr.de' => [ 'SWR 4 RP', 'SWR 4 RP', 'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
+        # on 2012-01-09 SWRinfo will replace cont.ra
         'contra.swr.de'  => [ 'cont.ra',  'cont.ra',  'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
+        'info.swr.de'    => [ 'SWRinfo',  'SWRinfo',  'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
         'dasding.swr.de' => [ 'Das Ding', 'Das Ding', 'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
       },
     },
