german config: enable Eurosport

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -88,12 +88,12 @@
 
     Eurosport => {
       Type => 'Eurosport',
-      Filename => '2010_6Weeks_GERMAN.xml',
+      Filename => '2012_6Weeks_GERMAN.xml',
       Channels => {
-	'eurosport.com' => 
-	    [ 'Eurosport', 'Eurosport', 'de', 0, 'sports', 'Sports', 'http://tv.eurosport.de/', 'TV' ],
-	'eurosport2.eurosport.com' => 
-	    [ 'Eurosport 2', 'Eurosport2', 'de', 0, 'sports', 'Sports', 'http://tv.eurosport.de/', 'TV' ],
+	'de.eurosport.com' => 
+	    [ 'Eurosport', 'EurosportGermany', 'de', 0, 'sports', 'Sports', 'http://tv.eurosport.de/', 'TV' ],
+	'de.eurosport2.eurosport.com' => 
+	    [ 'Eurosport 2', 'Eurosport2Germany', 'de', 0, 'sports', 'Sports', 'http://tv.eurosport.de/', 'TV' ],
       },
     },
 
