changes to german channels
rebranded EinsExtra to tagesschau24
add France24 (en and fr but not ar)
some test channels to reproduce bugs

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -90,10 +90,10 @@
       Type => 'Eurosport',
       Filename => '2012_6Weeks_GERMAN.xml',
       Channels => {
-	'de.eurosport.com' => 
-	    [ 'Eurosport', 'EurosportGermany', 'de', 0, 'sports', 'Sports', 'http://tv.eurosport.de/', 'TV' ],
-	'de.eurosport2.eurosport.com' => 
-	    [ 'Eurosport 2', 'Eurosport2Germany', 'de', 0, 'sports', 'Sports', 'http://tv.eurosport.de/', 'TV' ],
+#	'de.eurosport.com' => 
+#	    [ 'Eurosport', 'EurosportGermany', 'de', 0, 'sports', 'Sports', 'http://tv.eurosport.de/', 'TV' ],
+#	'de.eurosport2.eurosport.com' => 
+#	    [ 'Eurosport 2', 'Eurosport2Germany', 'de', 0, 'sports', 'Sports', 'http://tv.eurosport.de/', 'TV' ],
       },
     },
 
@@ -103,6 +103,10 @@
       Channels => {
         'english.aljazeera.net' =>
             [ 'Al Jazeera (English)', 'AJI', 'en', 0, '', '', 'http://www.aljazeera.com/', 'TV' ],
+        'en.france24.com' =>
+            [ 'France 24 (English)', '24U', 'en', 0, '', '', 'http://www.france24.com/', 'TV' ],
+        'fr.france24.com' =>
+            [ 'France 24 (Français)', '24F', 'fr', 0, '', '', 'http://www.france24.com/', 'TV' ],
       },
     },
 
@@ -132,10 +136,11 @@
     {
       Type => 'ORF_xml',
       Channels => {
-	'hd.orf1.orf.at' => [ 'ORFeins HD', 'ORF1', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
-	'hd.orf2.orf.at' => [ 'ORF 2 HD', 'ORF2', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
+	'hd.orf1.orf.at'   => [ 'ORFeins HD', 'ORF1', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
+	'hd.orf2.orf.at'   => [ 'ORF 2 HD', 'ORF2', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
+	'orf3.orf.at'      => [ 'ORF III', 'ORF3', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
 	'sportplus.orf.at' => [ 'ORF Sport Plus', 'ORFS', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
-	'3sat.at' => [ '3sat (ORF.pm als Programmquelle statt DreiSat.pm)', '3sat', 'de', 0, undef, undef, 'http://3sat.at/', 'TV' ],
+#	'3sat.at'          => [ '3sat (ORF.pm als Programmquelle statt DreiSat.pm)', '3sat', 'de', 0, undef, undef, 'http://3sat.at/', 'TV' ],
       },
     },
 
@@ -193,7 +198,7 @@
         'bw.swr.de' => [ 'SWR Fernsehen BW', 'SWR, BW', 'de', 0, undef, undef, 'http://www.swr.de/tv/bw/', 'TV' ],
         'rp.swr.de' => [ 'SWR Fernsehen RP', 'SWR, RP', 'de', 0, undef, undef, 'http://www.swr.de/tv/rp/', 'TV' ],
         'sr.swr.de' => [ 'SR Fernsehen', 'SWR, SR', 'de', 0, undef, undef, 'http://www.sr-online.de/fernsehen/', 'TV' ],
-        'eins-extra.ard.de' => [ 'EinsExtra', 'EinsExtra', 'de', 0, undef, undef, 'http://www.eins-extra.de/', 'TV' ],
+        'eins-extra.ard.de' => [ 'tagesschau24', 'EinsExtra', 'de', 0, undef, undef, 'http://www.tagesschau24.de/', 'TV' ],
         'einsplus.ard.de' => [ 'EinsPlus', 'EinsPlus', 'de', 0, undef, undef, 'http://www.einsplus.de/', 'TV' ],
         'hd.einsfestival.ard.de' => [ 'Einsfestival HD', 'EinsFestival', 'de', 0, undef, undef, 'http://www.einsfestival.de/was_ist_einsfestival/hdtv_in_einsfestival.jsp', 'TV' ],
         'bw.swr1.swr.de' => [ 'SWR 1 BW', 'SWR 1 BW', 'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
@@ -202,8 +207,8 @@
         'rp.swr2.swr.de' => [ 'SWR 2 RP', 'SWR 2 RP', 'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
         'bw.swr4.swr.de' => [ 'SWR 4 BW', 'SWR 4 BW', 'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
         'rp.swr4.swr.de' => [ 'SWR 4 RP', 'SWR 4 RP', 'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
-        # on 2012-01-09 SWRinfo will replace cont.ra
-        'contra.swr.de'  => [ 'cont.ra',  'cont.ra',  'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
+# on 2012-01-09 SWRinfo will replace cont.ra
+#       'contra.swr.de'  => [ 'cont.ra',  'cont.ra',  'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
         'info.swr.de'    => [ 'SWRinfo',  'SWRinfo',  'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
         'dasding.swr.de' => [ 'Das Ding', 'Das Ding', 'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
       },
@@ -228,7 +233,7 @@
       # same as Exporters->Xmltv->MaxDays + 1
       MaxDays => 3*7+1+1,
       Channels => {
-	'arteeinsextra.ard.de' => [ 'arte/EinsExtra', '', 'de', 0, undef, undef, undef, 'TV'],
+	'arteeinsextra.ard.de' => [ 'arte/tagesschau24', '', 'de', 0, undef, undef, undef, 'TV'],
 	'neokika.zdfmobil.de' => [ 'neo/KiKa', '', 'de', 0, undef, undef, undef, 'TV'],
         'nickcc.mtvnetworks.de' => [ 'Nickelodeon / Comedy Central (Germany)', '', 'de', 0, undef, undef, undef, 'TV'],
 #        'ch.nickcc.mtvnetworks.de' => [ 'Nickelodeon / Comedy Central (Switzerland)', '', 'de', 0, undef, undef, undef, 'TV'],
@@ -261,12 +266,34 @@
     #########################################################################################
     # from here on everything is just for testing and bugfixing
     #########################################################################################
+    NonstopWeb =>
+    {
+      Type => 'NonstopWeb',
+      Channels => {
+        'tnt7.se' => [ 'tnt7.se', 'tnt7/swe', 'se', 0, undef, undef, 'http://www.tnt-tv.se/', 'TEST' ],
+        'silver.nonstop.se' => [ 'Silver', 'silver-1/se/swe', 'se', 0, undef, undef, 'http://www.nonstop.tv/silver/', 'TEST' ],
+      },
+    },
+
     Timeshifter =>
     {
       Type => 'Timeshifter',
       MaxDays => 3,
       Channels => {
 #        'plus1.action.tv1000.viasat.hr' => [ 'timeshifted TV1000 Action hr', 'action.tv1000.viasat.hr, 60', 'hr', 0, undef, undef, undef, 'TEST'],
+      },
+    },
+    Viasat =>
+    {
+      Type => 'Viasat',
+      MaxWeeks => 1,
+      Channels => {
+        # croatia
+        'film.viasat.hr' => [ 'Viasat Film (hrvatska)', 'viasat_film_hr_', 'hr', 0, 'movie', 'Movies', undef, 'TEST'],
+        # denmark
+        'film.viasat.dk' => [ 'Viasat Film (danske)', 'viasat_film_dk_', 'dk', 0, 'movie', 'Movies', undef, 'TEST'],
+        # sweden
+        'film.viasat.se' => [ 'Viasat Film (svenska)', 'viasat_film_se_', 'sv', 0, 'movie', 'Movies', undef, 'TEST'],
       },
     },
   },
