german config, remove former Eins-Extra

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -198,7 +198,8 @@
         'bw.swr.de' => [ 'SWR Fernsehen BW', 'SWR, BW', 'de', 0, undef, undef, 'http://www.swr.de/tv/bw/', 'TV' ],
         'rp.swr.de' => [ 'SWR Fernsehen RP', 'SWR, RP', 'de', 0, undef, undef, 'http://www.swr.de/tv/rp/', 'TV' ],
         'sr.swr.de' => [ 'SR Fernsehen', 'SWR, SR', 'de', 0, undef, undef, 'http://www.sr-online.de/fernsehen/', 'TV' ],
-        'eins-extra.ard.de' => [ 'tagesschau24', 'EinsExtra', 'de', 0, undef, undef, 'http://www.tagesschau24.de/', 'TV' ],
+# not available from SWR press service any longer
+#        'eins-extra.ard.de' => [ 'tagesschau24', 'tagesschau24', 'de', 0, undef, undef, 'http://www.tagesschau24.de/', 'TV' ],
         'einsplus.ard.de' => [ 'EinsPlus', 'EinsPlus', 'de', 0, undef, undef, 'http://www.einsplus.de/', 'TV' ],
         'hd.einsfestival.ard.de' => [ 'Einsfestival HD', 'EinsFestival', 'de', 0, undef, undef, 'http://www.einsfestival.de/was_ist_einsfestival/hdtv_in_einsfestival.jsp', 'TV' ],
         'bw.swr1.swr.de' => [ 'SWR 1 BW', 'SWR 1 BW', 'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
@@ -233,7 +234,8 @@
       # same as Exporters->Xmltv->MaxDays + 1
       MaxDays => 3*7+1+1,
       Channels => {
-	'arteeinsextra.ard.de' => [ 'arte/tagesschau24', '', 'de', 0, undef, undef, undef, 'TV'],
+# time sharing Arte/Eins-Extra stopped with the rebrand to tagesschau24
+#	'arteeinsextra.ard.de' => [ 'arte/tagesschau24', '', 'de', 0, undef, undef, undef, 'TV'],
 	'neokika.zdfmobil.de' => [ 'neo/KiKa', '', 'de', 0, undef, undef, undef, 'TV'],
         'nickcc.mtvnetworks.de' => [ 'Nickelodeon / Comedy Central (Germany)', '', 'de', 0, undef, undef, undef, 'TV'],
 #        'ch.nickcc.mtvnetworks.de' => [ 'Nickelodeon / Comedy Central (Switzerland)', '', 'de', 0, undef, undef, undef, 'TV'],
