DWDE: new Importer for Deutsche Welle

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -86,6 +86,19 @@
       },
     },
 
+    DWDE =>
+    {
+      Type => 'DWDE',
+      Channels => {
+        'europe.dw.de'  => [ 'DW (Europe)',               'http://www.dw.de/program/tv-program-guide/s-4757-202',  'en', 0, undef, undef, 'http://www.dw.de/', 'TV' ],
+        'la.dw.de'      => [ 'DW (Latinoamérica)', 'http://www.dw.de/program/tv-program-guide/s-4757-9797', 'en', 0, undef, undef, 'http://www.dw.de/', 'TV' ],
+        'dw.de'         => [ 'DW',                        'http://www.dw.de/program/tv-program-guide/s-4757-9798', 'en', 0, undef, undef, 'http://www.dw.de/', 'TV' ],
+        'arabia.dw.de'  => [ 'DW (Arabia)',               'http://www.dw.de/program/tv-program-guide/s-4757-9799', 'en', 0, undef, undef, 'http://www.dw.de/', 'TV' ],
+        'amerika.dw.de' => [ 'DW (Amerika)',              'http://www.dw.de/program/tv-program-guide/s-4757-9800', 'en', 0, undef, undef, 'http://www.dw.de/', 'TV' ],
+        'asien.dw.de'   => [ 'DW (Asien)',                'http://www.dw.de/program/tv-program-guide/s-4757-9801', 'en', 0, undef, undef, 'http://www.dw.de/', 'TV' ],
+      },
+    },
+
     Eurosport => {
       Type => 'Eurosport',
       Filename => '2012_6Weeks_GERMAN.xml',
@@ -99,7 +112,7 @@
 
     Infomedia => {
       Type => 'Infomedia',
-      MaxDays => 25,
+      MaxDays => 22,
       Channels => {
         'english.aljazeera.net' =>
             [ 'Al Jazeera (English)', 'AJI', 'en', 0, '', '', 'http://www.aljazeera.com/', 'TV' ],
