add downconversion HD->SD for SWR / Tele5

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -160,6 +160,7 @@
     RadioSevenSE =>
     {
       Type => 'RadioSevenSE',
+      UrlRoot => 'http://www.radioseven.se/rss/xmltabla.asp',
       Channels => {
         'radioseven.se' => [ 'radioseven.se', '', 'se', 0, undef, 'Music', 'http://www.radioseven.se/', 'RADIO' ],
       },
@@ -206,11 +207,11 @@
     {
       Type => 'Tele5',
       Channels => {
-	'tele5.de' => [ 'Tele5', 'Tele 5', 'de', 0, undef, undef, 'http://www.tele5.de/', 'TV' ],
+	'hd.tele5.de' => [ 'Tele5 HD', 'Tele 5', 'de', 0, undef, undef, 'http://www.tele5.de/', 'TV' ],
         'swr3.de' => [ 'SWR 3', 'SWR 3', 'de', 0, 'tvshow', 'Music', 'http://www.swr3.de/', 'RADIO' ],
-        'bw.swr.de' => [ 'SWR Fernsehen BW', 'SWR, BW', 'de', 0, undef, undef, 'http://www.swr.de/tv/bw/', 'TV' ],
-        'rp.swr.de' => [ 'SWR Fernsehen RP', 'SWR, RP', 'de', 0, undef, undef, 'http://www.swr.de/tv/rp/', 'TV' ],
-        'sr.swr.de' => [ 'SR Fernsehen', 'SWR, SR', 'de', 0, undef, undef, 'http://www.sr-online.de/fernsehen/', 'TV' ],
+        'hd.bw.swr.de' => [ 'SWR Fernsehen BW HD', 'SWR, BW', 'de', 0, undef, undef, 'http://www.swr.de/tv/bw/', 'TV' ],
+        'hd.rp.swr.de' => [ 'SWR Fernsehen RP HD', 'SWR, RP', 'de', 0, undef, undef, 'http://www.swr.de/tv/rp/', 'TV' ],
+        'hd.sr.swr.de' => [ 'SR Fernsehen HD', 'SWR, SR', 'de', 0, undef, undef, 'http://www.sr-online.de/fernsehen/', 'TV' ],
 # not available from SWR press service any longer
 #        'eins-extra.ard.de' => [ 'tagesschau24', 'tagesschau24', 'de', 0, undef, undef, 'http://www.tagesschau24.de/', 'TV' ],
         'einsplus.ard.de' => [ 'EinsPlus', 'EinsPlus', 'de', 0, undef, undef, 'http://www.einsplus.de/', 'TV' ],
@@ -224,7 +225,7 @@
 # on 2012-01-09 SWRinfo will replace cont.ra
 #       'contra.swr.de'  => [ 'cont.ra',  'cont.ra',  'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
         'info.swr.de'    => [ 'SWRinfo',  'SWRinfo',  'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
-        'dasding.swr.de' => [ 'Das Ding', 'Das Ding', 'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
+        'dasding.swr.de' => [ 'Das Ding', 'DASDING', 'de', 0, undef, undef, 'http://www.swr.de/', 'RADIO' ],
       },
     },
 
@@ -266,6 +267,10 @@
 	'einsfestival.ard.de' => [ 'Einsfestival', 'hd.einsfestival.ard.de, quality', 'de', 0, undef, undef, 'http://www.einsfestival.de/', 'TV'],
 	'orf1.orf.at' => [ 'ORFeins', 'hd.orf1.orf.at, quality', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
 	'orf2.orf.at' => [ 'ORF 2', 'hd.orf2.orf.at, quality', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
+	'bw.swr.de' => [ 'SWR Fernsehen BW', 'hd.bw.swr.de, quality', 'de', 0, undef, undef, 'http://www.swr.de/tv/bw/', 'TV' ],
+	'rp.swr.de' => [ 'SWR Fernsehen RP', 'hd.rp.swr.de, quality', 'de', 0, undef, undef, 'http://www.swr.de/tv/rp/', 'TV' ],
+	'sr.swr.de' => [ 'SR Fernsehen',     'hd.sr.swr.de, quality', 'de', 0, undef, undef, 'http://www.sr-online.de/fernsehen/', 'TV' ],
+	'tele5.de' => [ 'Tele5', 'hd.tele5.de, quality', 'de', 0, undef, undef, 'http://www.tele5.de/', 'TV'],
 	'zdf.de' => [ 'ZDF', 'hd.zdf.de, quality', 'de', 0, undef, undef, 'http://www.zdf.de/', 'TV'],
       },
     },
@@ -309,6 +314,15 @@
         'film.viasat.dk' => [ 'Viasat Film (danske)', 'viasat_film_dk_', 'dk', 0, 'movie', 'Movies', undef, 'TEST'],
         # sweden
         'film.viasat.se' => [ 'Viasat Film (svenska)', 'viasat_film_se_', 'sv', 0, 'movie', 'Movies', undef, 'TEST'],
+      },
+    },
+
+    DR_xml =>
+    {
+      Type => 'DR_xml',
+      MaxDays => 3,
+      Channels => {
+        'dr1.dr.dk' => ['DR1','DR1','dk', 0, undef, undef, undef, 'TEST'],
       },
     },
   },
