rename 3sat to 3sat HD and add downcoverter
remember to manually update the database to keep the augmenters intact.

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -82,7 +82,7 @@
       Type => 'DreiSat',
       MaxWeeks => 6,
       Channels => {
-	'3sat.de' => [ '3sat', '', 'de', 0, undef, undef, 'http://www.3sat.de/', 'TV' ],
+	'hd.3sat.de' => [ '3sat HD', '', 'de', 0, undef, undef, 'http://www.3sat.de/', 'TV' ],
       },
     },
 
@@ -262,6 +262,7 @@
       # same as Exporters->Xmltv->MaxDays + 1
       MaxDays => 3*7+1+1,
       Channels => {
+	'3sat.de' => [ '3sat', 'hd.3sat.de, quality', 'de', 0, undef, undef, 'http://www.3sat.de/', 'TV' ],
 	'arte.de' => [ 'ARTE', 'hd.arte.de, quality', 'de', 0, undef, undef, 'http://www.arte.de', 'TV'],
 	'daserste.de' => [ 'Das Erste', 'hd.daserste.de, quality', 'de', 0, undef, undef, 'http://www.daserste.de', 'TV'],
 	'einsfestival.ard.de' => [ 'Einsfestival', 'hd.einsfestival.ard.de, quality', 'de', 0, undef, undef, 'http://www.einsfestival.de/', 'TV'],
