--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -347,6 +347,15 @@
       OnlyAugmentFacts => 1,         # don't bill me for using texts that sound like yours (when it's not clear who has what rights, you included!)
     },
 
+    Tmdb3 =>
+    {
+      Type => 'Tmdb3',
+#      Language => 'de-DE',           # main language/region used for initializing and languagestrings
+                                     # de-DE is a workaround for bug #5 at tmdb (US rating for DE locale, etc)
+      ApiKey => 'see override.conf', # verify if it's per software or per installation
+      OnlyAugmentFacts => 1,         # don't bill me for using texts that sound like yours (when it's not clear who has what rights, you included!)
+    },
+
     Fixups =>
     {
       Type => 'Fixups',
