switch to tmdb v3 api to move on from there

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -340,7 +340,7 @@
 
     Tmdb =>
     {
-      Type => 'Tmdb',
+      Type => 'Tmdb3',
 #      Language => 'de-DE',           # main language/region used for initializing and languagestrings
                                      # de-DE is a workaround for bug #5 at tmdb (US rating for DE locale, etc)
       ApiKey => 'see override.conf', # verify if it's per software or per installation
