add TV4 to test importers for debugging

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -326,6 +326,16 @@
         'dr1.dr.dk' => ['DR1','DR1','dk', 0, undef, undef, undef, 'TEST'],
       },
     },
+
+    TV4 =>
+    {
+      Type => 'TV4',
+      MaxDays => 2,
+      UrlRoot => 'http://oldpress.tv4.se/tablesLouise.aspx',
+      Channels => {
+        'film.tv4.se' => ['TV4 Film','5','se', 0, undef, undef, undef, 'TEST'],
+      },
+    },
   },
 
   Augmenters =>
