--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -174,6 +174,18 @@
       },
     },
 
+    RBBDE => {
+      Type => 'RBBDE',
+      Channels => {
+        'rbb.rbb-online.de' =>
+            [ 'RBB gemeinsam',          'RBB',     'de', 0, '', '', 'http://rbb-online.de/', 'TV' ],
+        'rbbberl.rbb-online.de' =>
+            [ 'RBB Berlin Zusatz',      'RBBBERL', 'de', 0, '', '', 'http://rbb-online.de/', 'TV' ],
+        'rbbbra.rbb-online.de' =>
+            [ 'RBB Brandenburg Zusatz', 'RBBBRA',  'de', 0, '', '', 'http://rbb-online.de/', 'TV' ],
+      },
+    },
+
     SRF =>
     {
       Type => 'SRF',
