add RBB combinations to combiner

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -265,6 +265,8 @@
 	'neokika.zdfmobil.de' => [ 'neo/KiKa', '', 'de', 0, undef, undef, undef, 'TV'],
         'nickcc.mtvnetworks.de' => [ 'Nickelodeon / Comedy Central (Germany)', '', 'de', 0, undef, undef, undef, 'TV'],
 #        'ch.nickcc.mtvnetworks.de' => [ 'Nickelodeon / Comedy Central (Switzerland)', '', 'de', 0, undef, undef, undef, 'TV'],
+	'berl.rbb-online.de'       => [ 'RBB Berlin',                                 '', 'de', 0, undef, undef, undef, 'TV'],
+	'bra.rbb-online.de'        => [ 'RBB Brandenburg',                            '', 'de', 0, undef, undef, undef, 'TV'],
       },
     },
 
