--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -56,7 +56,21 @@
       Username => 'see override.conf',
       Password => 'see override.conf',
       Channels => {
-	'hd.daserste.de' => [ 'Das Erste HD', '', 'de', 0, undef, undef, 'http://www.daserste.de/', 'TV' ],
+	'hd.daserste.de'           => [ 'Das Erste HD',   '', 'de', 0, undef, undef, 'http://www.daserste.de/', 'TV' ],
+        'ndr.daserste.de'          => [ 'NDR',           '2', 'de', 0, undef, undef, undef, 'TV' ],
+        'wdr.daserste.de'          => [ 'WDR',           '4', 'de', 0, undef, undef, undef, 'TV' ],
+        'rbb.daserste.de'          => [ 'RBB',           '6', 'de', 0, undef, undef, undef, 'TV' ],
+        'br-alpha.daserste.de'     => [ 'BR-alpha',     '11', 'de', 0, undef, undef, undef, 'TV' ],
+        'einsfestival.daserste.de' => [ 'EinsFestival', '12', 'de', 0, undef, undef, undef, 'TV' ],
+        'phoenix.daserste.de'      => [ 'Phoenix',      '13', 'de', 0, undef, undef, undef, 'TV' ],
+        'mdr.daserste.de'          => [ 'MDR',          '14', 'de', 0, undef, undef, undef, 'TV' ],
+        'einsplus.daserste.de'     => [ 'EinsPlus',     '15', 'de', 0, undef, undef, undef, 'TV' ],
+        'hr.daserste.de'           => [ 'hr-fernsehen', '17', 'de', 0, undef, undef, undef, 'TV' ],
+        'bfs.daserste.de'          => [ 'BFS',          '18', 'de', 0, undef, undef, undef, 'TV' ],
+        'einsextra.daserste.de'    => [ 'EinsExtra',    '19', 'de', 0, undef, undef, undef, 'TV' ],
+        'bw.swr.daserste.de'       => [ 'SWR BW',       '21', 'de', 0, undef, undef, undef, 'TV' ],
+        'rp.swr.daserste.de'       => [ 'SWR RP',       '20', 'de', 0, undef, undef, undef, 'TV' ],
+        'sr.swr.daserste.de'       => [ 'SWR SR',       '22', 'de', 0, undef, undef, undef, 'TV' ],
       },
     },
 
