--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -306,7 +306,7 @@
 	'orf2.orf.at' => [ 'ORF 2', 'hd.orf2.orf.at, quality', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
 	'bw.swr.de' => [ 'SWR Fernsehen BW', 'hd.bw.swr.de, quality', 'de', 0, undef, undef, 'http://www.swr.de/tv/bw/', 'TV' ],
 	'rp.swr.de' => [ 'SWR Fernsehen RP', 'hd.rp.swr.de, quality', 'de', 0, undef, undef, 'http://www.swr.de/tv/rp/', 'TV' ],
-	'sd.anixehd.tv'       => [ 'ANIXE SD',     'hd.anixehd.tv', 'de', 0, undef, undef, 'http://www.anixehd.tv/', 'TV' ],
+	'sd.anixehd.tv'       => [ 'ANIXE SD',     'hd.anixehd.tv, quality', 'de', 0, undef, undef, 'http://www.anixehd.tv/', 'TV' ],
 	'sr.swr.de' => [ 'SR Fernsehen',     'hd.sr.swr.de, quality', 'de', 0, undef, undef, 'http://www.sr-online.de/fernsehen/', 'TV' ],
 	'tele5.de' => [ 'Tele5', 'hd.tele5.de, quality', 'de', 0, undef, undef, 'http://www.tele5.de/', 'TV'],
 	'zdf.de' => [ 'ZDF', 'hd.zdf.de, quality', 'de', 0, undef, undef, 'http://www.zdf.de/', 'TV'],
