DRadioDE: update to new url scheme (same as DRadioWissenDE)

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -86,8 +86,8 @@
     {
       Type => 'DRadioDE',
       Channels => {
-	'dlf.dradio.de' => [ 'Deutschlandfunk', 'dlf', 'de', 0, undef, undef, 'http://www.dradio.de/dlf/', 'RADIO' ],
-	'dkultur.dradio.de' => [ 'Deutschlandradio Kultur', 'dkultur', 'de', 0, undef, undef, 'http://www.dradio.de/dkultur/', 'RADIO' ],
+	'dlf.dradio.de' => [ 'Deutschlandfunk', 'http://www.deutschlandfunk.de/programmvorschau.281.de.html', 'de', 0, undef, undef, 'http://www.dradio.de/dlf/', 'RADIO' ],
+	'dkultur.dradio.de' => [ 'Deutschlandradio Kultur', 'http://www.deutschlandradiokultur.de/programmvorschau.282.de.html', 'de', 0, undef, undef, 'http://www.dradio.de/dkultur/', 'RADIO' ],
       },
     },
 
