--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -173,6 +173,7 @@
       Channels => {
 	'hd.orf1.orf.at'   => [ 'ORFeins HD', 'ORF1', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
 	'hd.orf2.orf.at'   => [ 'ORF 2 HD', 'ORF2', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
+	'hd.europe.orf2.orf.at' => [ 'ORF 2 Europe HD', 'ORF2, orf2europe', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
 	'orf3.orf.at'      => [ 'ORF III', 'ORF3', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
 	'sportplus.orf.at' => [ 'ORF Sport Plus', 'ORFS', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
 #	'3sat.at'          => [ '3sat (ORF.pm als Programmquelle statt DreiSat.pm)', '3sat', 'de', 0, undef, undef, 'http://3sat.at/', 'TV' ],
@@ -304,6 +305,7 @@
 	'einsfestival.ard.de' => [ 'Einsfestival', 'hd.einsfestival.ard.de, quality', 'de', 0, undef, undef, 'http://www.einsfestival.de/', 'TV'],
 	'orf1.orf.at' => [ 'ORFeins', 'hd.orf1.orf.at, quality', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
 	'orf2.orf.at' => [ 'ORF 2', 'hd.orf2.orf.at, quality', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
+	'europe.orf2.orf.at' => [ 'ORF 2 Europe', 'hd.europe.orf2.orf.at, quality', 'de', 0, undef, undef, 'http://orf.at/', 'TV' ],
 	'bw.swr.de' => [ 'SWR Fernsehen BW', 'hd.bw.swr.de, quality', 'de', 0, undef, undef, 'http://www.swr.de/tv/bw/', 'TV' ],
 	'rp.swr.de' => [ 'SWR Fernsehen RP', 'hd.rp.swr.de, quality', 'de', 0, undef, undef, 'http://www.swr.de/tv/rp/', 'TV' ],
 	'sd.anixehd.tv'       => [ 'ANIXE SD',     'hd.anixehd.tv, quality', 'de', 0, undef, undef, 'http://www.anixehd.tv/', 'TV' ],
