switch Al Jazeera to the HD feed as it contains no duplicates without description

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -137,7 +137,7 @@
       MaxDays => 22,
       Channels => {
         'english.aljazeera.net' =>
-            [ 'Al Jazeera (English)', 'AJI', 'en', 0, '', '', 'http://www.aljazeera.com/', 'TV' ],
+            [ 'Al Jazeera (English)', 'AJE', 'en', 0, '', '', 'http://www.aljazeera.com/', 'TV' ],
         'en.france24.com' =>
             [ 'France 24 (English)', '24U', 'en', 0, '', '', 'http://www.france24.com/', 'TV' ],
         'fr.france24.com' =>
