alpha rebrand from BR to ARD

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -68,7 +68,7 @@
         'ndr.daserste.de'          => [ 'NDR',           '2', 'de', 0, undef, undef, undef, 'TV' ],
         'wdr.daserste.de'          => [ 'WDR',           '4', 'de', 0, undef, undef, undef, 'TV' ],
         'rbb.daserste.de'          => [ 'RBB',           '6', 'de', 0, undef, undef, undef, 'TV' ],
-        'br-alpha.daserste.de'     => [ 'BR-alpha',     '11', 'de', 0, undef, undef, undef, 'TV' ],
+        'br-alpha.daserste.de'     => [ 'ARD-alpha',    '23', 'de', 0, undef, undef, undef, 'TV' ],
         'einsfestival.daserste.de' => [ 'EinsFestival', '12', 'de', 0, undef, undef, undef, 'TV' ],
         'phoenix.daserste.de'      => [ 'Phoenix',      '13', 'de', 0, undef, undef, undef, 'TV' ],
         'mdr.daserste.de'          => [ 'MDR',          '14', 'de', 0, undef, undef, undef, 'TV' ],
