Combiner: add Viva/ComedyCentral

--- a/examples/de/nonametv.conf
+++ b/examples/de/nonametv.conf
@@ -288,6 +288,7 @@
 	'neokika.zdfmobil.de' => [ 'neo/KiKa', '', 'de', 0, undef, undef, undef, 'TV'],
         'nickcc.mtvnetworks.de' => [ 'Nickelodeon / Comedy Central (Germany)', '', 'de', 0, undef, undef, undef, 'TV'],
 #        'ch.nickcc.mtvnetworks.de' => [ 'Nickelodeon / Comedy Central (Switzerland)', '', 'de', 0, undef, undef, undef, 'TV'],
+        'vivacc.mtvnetworks.de' => [ 'Viva / Comedy Central (Germany)', '', 'de', 0, undef, undef, undef, 'TV'],
 	'berl.rbb-online.de'       => [ 'RBB Berlin',                                 '', 'de', 0, undef, undef, undef, 'TV'],
 	'bra.rbb-online.de'        => [ 'RBB Brandenburg',                            '', 'de', 0, undef, undef, undef, 'TV'],
       },
@@ -373,6 +374,14 @@
       UrlRoot => 'http://oldpress.tv4.se/tablesLouise.aspx',
       Channels => {
         'film.tv4.se' => ['TV4 Film','5','se', 0, undef, undef, undef, 'TEST'],
+      },
+    },
+
+    BabyTV =>
+    {
+      Type => 'BabyTV',
+      Channels => {
+        'baby.tv' => ['Baby TV (Import test)', undef, 'en', 0, undef, undef, undef, 'TEST'],
       },
     },
   },
